force-app/main/default/objects/Case/fields/NICEnvio__c.field-meta.xml
<CustomField>
    <fullName>NICEnvio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NIC Envío</label>
    <referenceTo>NIC_Envio__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>