force-app/main/default/objects/Case/fields/No_present_documentaci_n__c.field-meta.xml
<CustomField>
    <fullName>No_present_documentaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No presentó documentación</label>
    <type>Checkbox</type>
</CustomField>