force-app/main/default/objects/Case/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>