force-app/main/default/objects/Case/fields/Nombre_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_producto__c</fullName>
    <formula>Producto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de producto</label>
    <type>Text</type>
</CustomField>