force-app/main/default/objects/Case/fields/Nombre_del_paciente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_paciente__c</fullName>
    <formula>Account.Nombre_oculto__c + &apos; &apos; + Account.Apellido_oculto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del paciente</label>
    <type>Text</type>
</CustomField>