force-app/main/default/objects/Case/fields/Notas_internas__c.field-meta.xml
<CustomField>
    <fullName>Notas_internas__c</fullName>
    <label>Notas internas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>