force-app/main/default/objects/Case/fields/Notificacion_Llamado_sensible_enviada__c.field-meta.xml
<CustomField>
    <fullName>Notificacion_Llamado_sensible_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificacion Llamado sensible enviada</label>
    <type>Checkbox</type>
</CustomField>