force-app/main/default/objects/Case/fields/Nro_de_Comprobante__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_Comprobante__c</fullName>
    <description>Campo que trae el número de comprobante de la factura relacionada al caso</description>
    <formula>Dan360_Factura__r.Dan360_NroComprobante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nro de Comprobante</label>
    <type>Text</type>
</CustomField>