force-app/main/default/objects/Case/fields/Nro_Orden_SAP__c.field-meta.xml
<CustomField>
    <fullName>Nro_Orden_SAP__c</fullName>
    <label>Nro Orden SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>