force-app/main/default/objects/Case/fields/Numero_de_cupon__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cupon__c</fullName>
    <label>Número de cupón</label>
    <length>50</length>
    <type>Text</type>
</CustomField>