force-app/main/default/objects/Case/fields/Numero_de_NIC__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_NIC__c</fullName>
    <label>Numero de NIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>