force-app/main/default/objects/Case/fields/Numero_de_nota_de_credito_asociada__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_nota_de_credito_asociada__c</fullName>
    <label>Número de nota de crédito asociada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>