force-app/main/default/objects/Case/fields/Numero_de_Remito__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Remito__c</fullName>
    <description>Campo que trae el número de remito de la factura al caso relacionado.</description>
    <formula>Dan360_Factura__r.Dan360_NumeroDeRemito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Remito</label>
    <type>Text</type>
</CustomField>