force-app/main/default/objects/Case/fields/Numero_de_serie_de_bomba__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_serie_de_bomba__c</fullName>
    <label>Número de serie de bomba</label>
    <length>100</length>
    <type>Text</type>
</CustomField>