force-app/main/default/objects/Case/fields/Numero_EP__c.field-meta.xml
<CustomField>
    <fullName>Numero_EP__c</fullName>
    <label>Número EP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>