force-app/main/default/objects/Case/fields/Obra_social__c.field-meta.xml
<CustomField>
    <fullName>Obra_social__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra social</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Se puede asociar el caso únicamente con Obras Sociales</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Obra_social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Obra Social)</relationshipLabel>
    <relationshipName>Casos_de_Obra_Social</relationshipName>
    <type>Lookup</type>
</CustomField>