force-app/main/default/objects/Case/fields/Obra_social_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Obra_social_de_paciente__c</fullName>
    <formula>Account.PersonContact.Obra_social__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obra social de paciente</label>
    <type>Text</type>
</CustomField>