force-app/main/default/objects/Case/fields/Observacion__c.field-meta.xml
<CustomField>
    <fullName>Observacion__c</fullName>
    <label>Observación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>