force-app/main/default/objects/Case/fields/Otro_motivo__c.field-meta.xml
<CustomField>
    <fullName>Otro_motivo__c</fullName>
    <label>Otro motivo</label>
    <type>TextArea</type>
</CustomField>