force-app/main/default/objects/Case/fields/Otros__c.field-meta.xml
<CustomField>
    <fullName>Otros__c</fullName>
    <inlineHelpText>Presentó otra documentación?</inlineHelpText>
    <label>Otros</label>
    <length>200</length>
    <type>Text</type>
</CustomField>