force-app/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resoluci_n__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renovó módulo</fullName>
            </value>
            <value>
                <fullName>Extensión de módulo</fullName>
            </value>
            <value>
                <fullName>Cliente recuperado (OOSS)</fullName>
            </value>
            <value>
                <fullName>Retoma tratamiento por orden médica</fullName>
            </value>
            <value>
                <fullName>OOSS autoriza por gestión comercial</fullName>
            </value>
            <value>
                <fullName>Asesoramiento nutricional BC autorizado</fullName>
            </value>
            <value>
                <fullName>OOSS no autoriza canal Best Care</fullName>
            </value>
            <value>
                <fullName>Cliente inactivo (OOSS)</fullName>
            </value>
            <value>
                <fullName>OOSS no autoriza cobertura tratamiento</fullName>
            </value>
            <value>
                <fullName>Paciente cambia OOSS</fullName>
            </value>
            <value>
                <fullName>Paciente no posee OOSS</fullName>
            </value>
            <value>
                <fullName>Asesoramiento nutricional BC no autorizado</fullName>
            </value>
            <value>
                <fullName>No tolera</fullName>
            </value>
            <value>
                <fullName>No contactable</fullName>
            </value>
            <value>
                <fullName>Paciente compra particular</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Rehabilitó/Alta de tratamiento</fullName>
            </value>
            <value>
                <fullName>Sin información de la OOSS</fullName>
            </value>
            <value>
                <fullName>Instituciones - Sin licitacion</fullName>
            </value>
            <value>
                <fullName>Paciente se niega a dar información</fullName>
            </value>
            <value>
                <fullName>Cobertura Total</fullName>
            </value>
            <value>
                <fullName>Cobertura Parcial de productos</fullName>
            </value>
            <value>
                <fullName>Cobertura Parcial Cantidad</fullName>
            </value>
            <value>
                <fullName>Cobertura por recurso de amparo</fullName>
            </value>
            <value>
                <fullName>Cobertura rechazada</fullName>
            </value>
            <value>
                <fullName>Sin respuesta de la OS</fullName>
            </value>
            <value>
                <fullName>Recurso de amparo</fullName>
            </value>
            <value>
                <fullName>Gestión independiente</fullName>
            </value>
            <value>
                <fullName>Sin respuesta de la familia</fullName>
            </value>
            <value>
                <fullName>Familia solicita no contacto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>