force-app/main/default/objects/Case/fields/Paciente_contactado__c.field-meta.xml
<CustomField>
    <fullName>Paciente_contactado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paciente contactado</label>
    <type>Checkbox</type>
</CustomField>