force-app/main/default/objects/Case/fields/Pediatra__c.field-meta.xml
<CustomField>
    <fullName>Pediatra__c</fullName>
    <description>Para el formulario de solicitud de kits de inicio desde el portal de pacientes</description>
    <label>Pediatra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>