force-app/main/default/objects/Case/fields/Pedido_en_proceso__c.field-meta.xml
<CustomField>
    <fullName>Pedido_en_proceso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido en proceso</label>
    <type>Checkbox</type>
</CustomField>