force-app/main/default/objects/Case/fields/Planta_elaboradora__c.field-meta.xml
<CustomField>
    <fullName>Planta_elaboradora__c</fullName>
    <label>Planta elaboradora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kasdorf</fullName>
            </value>
            <value>
                <fullName>Milkaut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>