force-app/main/default/objects/Case/fields/Potencial_Fraude__c.field-meta.xml
<CustomField>
    <fullName>Potencial_Fraude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potencial Fraude</label>
    <type>Checkbox</type>
</CustomField>