force-app/main/default/objects/Case/fields/Producto_1__c.field-meta.xml
<CustomField>
    <fullName>Producto_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto presenteado 1</description>
    <inlineHelpText>Producto presenteado 1</inlineHelpText>
    <label>Producto 1</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Producto_SAP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>equals</operation>
            <value>COMP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases (Producto 1)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>