force-app/main/default/objects/Case/fields/Producto_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>