force-app/main/default/objects/Case/fields/Producto_de_retiro_2__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_retiro_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Completar únicamente si la muestra fue retirada</inlineHelpText>
    <label>Producto de retiro 2°</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases (Product)</relationshipLabel>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>