force-app/main/default/objects/Case/fields/Producto_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_retiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Completar únicamente si la muestra fue retirada</inlineHelpText>
    <label>Producto de retiro</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases (Producto de retiro)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>