force-app/main/default/objects/Case/fields/Producto_reposicion_2__c.field-meta.xml
<CustomField>
    <fullName>Producto_reposicion_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto reposición 2°</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases (Producto reposición 2°)</relationshipLabel>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>