force-app/main/default/objects/Case/fields/Producto_reposicion__c.field-meta.xml
<CustomField>
    <fullName>Producto_reposicion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Producto reposición</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases (Producto reposición)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>