force-app/main/default/objects/Case/fields/Punto_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Punto_de_venta__c</fullName>
    <label>Punto de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>