force-app/main/default/objects/Case/fields/Receta__c.field-meta.xml
<CustomField>
    <fullName>Receta__c</fullName>
    <inlineHelpText>Presentó receta?</inlineHelpText>
    <label>Receta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>