force-app/main/default/objects/Case/fields/Reclamos_asociados__c.field-meta.xml
<CustomField>
    <fullName>Reclamos_asociados__c</fullName>
    <label>Reclamos asociados</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>