force-app/main/default/objects/Case/fields/Reposici_n_realizada__c.field-meta.xml
<CustomField>
    <fullName>Reposici_n_realizada__c</fullName>
    <label>Reposición realizada?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>