force-app/main/default/objects/Case/fields/reposicion_realizada_2__c.field-meta.xml
<CustomField>
    <fullName>reposicion_realizada_2__c</fullName>
    <label>Reposición realizada 2°?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>