force-app/main/default/objects/Case/fields/Requiere_carga_de_zodo__c.field-meta.xml
<CustomField>
    <fullName>Requiere_carga_de_zodo__c</fullName>
    <inlineHelpText>Responder solamente en caso de Subtipo: Ecommerce</inlineHelpText>
    <label>Requiere carga de zodo?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subtipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>