force-app/main/default/objects/Case/fields/Requiere_reposici_n__c.field-meta.xml
<CustomField>
    <fullName>Requiere_reposici_n__c</fullName>
    <label>Requiere reposición</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>