force-app/main/default/objects/Case/fields/Requiere_reposicion__c.field-meta.xml
<CustomField>
    <fullName>Requiere_reposicion__c</fullName>
    <label>Requiere reposicion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>