force-app/main/default/objects/Case/fields/Requiere_retiro2__c.field-meta.xml
<CustomField>
    <fullName>Requiere_retiro2__c</fullName>
    <label>Requiere retiro 2°</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>