force-app/main/default/objects/Case/fields/Resoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Resoluci_n__c</fullName>
    <label>Resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retenido</fullName>
            </value>
            <value>
                <fullName>No retenido</fullName>
            </value>
            <value>
                <fullName>Excluídos</fullName>
            </value>
            <value>
                <fullName>Cobertura lograda</fullName>
            </value>
            <value>
                <fullName>Cobertura no lograda</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>No entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>