force-app/main/default/objects/Case/fields/Resolucion_look__c.field-meta.xml
<CustomField>
    <fullName>Resolucion_look__c</fullName>
    <formula>text(Resoluci_n__c)</formula>
    <label>Resolucion_look</label>
    <type>Text</type>
</CustomField>