force-app/main/default/objects/Case/fields/Respuesta_Integracion_SAP__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Integracion_SAP__c</fullName>
    <label>Respuesta Integracion SAP</label>
    <type>TextArea</type>
</CustomField>