force-app/main/default/objects/Case/fields/Se_recibi_muestra_para_analisis__c.field-meta.xml
<CustomField>
    <fullName>Se_recibi_muestra_para_analisis__c</fullName>
    <label>¿Se recibió muestra para analisis?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>