force-app/main/default/objects/Case/fields/SHIP_TO__c.field-meta.xml
<CustomField>
    <fullName>SHIP_TO__c</fullName>
    <formula>Account.N_SHIP_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SHIP-TO</label>
    <type>Text</type>
</CustomField>