force-app/main/default/objects/Case/fields/Si_hubo_desv_os_desarrolle_cuales__c.field-meta.xml
<CustomField>
    <fullName>Si_hubo_desv_os_desarrolle_cuales__c</fullName>
    <label>Si hubo desvíos, desarrolle cuales</label>
    <type>TextArea</type>
</CustomField>