force-app/main/default/objects/Case/fields/Sintomas__c.field-meta.xml
<CustomField>
    <fullName>Sintomas__c</fullName>
    <label>Síntomas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>