force-app/main/default/objects/Case/fields/SKU_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>SKU_de_Producto__c</fullName>
    <formula>Producto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU de Producto</label>
    <type>Text</type>
</CustomField>