force-app/main/default/objects/Case/fields/SLA_numero__c.field-meta.xml
<CustomField>
    <fullName>SLA_numero__c</fullName>
    <defaultValue>1</defaultValue>
    <label>SLA numero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>