force-app/main/default/objects/Case/fields/SOLD_TO__c.field-meta.xml
<CustomField>
    <fullName>SOLD_TO__c</fullName>
    <formula>Account.PersonContact.Obra_social__r.N_SOLD_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOLD-TO</label>
    <type>Text</type>
</CustomField>