force-app/main/default/objects/Case/fields/Solicitud_de_envio_de_MM__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_envio_de_MM__c</fullName>
    <label>Solicitud de envío de MM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>