force-app/main/default/objects/Case/fields/Submotivo__c.field-meta.xml
<CustomField>
    <fullName>Submotivo__c</fullName>
    <label>Submotivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Color anormal</fullName>
            </value>
            <value>
                <fullName>Diarrea</fullName>
            </value>
            <value>
                <fullName>Envase abollado</fullName>
            </value>
            <value>
                <fullName>Grumos / separación de fases</fullName>
            </value>
            <value>
                <fullName>Mal olor</fullName>
            </value>
            <value>
                <fullName>Mal sabor</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Partículas blancas</fullName>
            </value>
            <value>
                <fullName>Partículas oscuras</fullName>
            </value>
            <value>
                <fullName>Pelo</fullName>
            </value>
            <value>
                <fullName>Plagas e insectos</fullName>
            </value>
            <value>
                <fullName>Plástico</fullName>
            </value>
            <value>
                <fullName>Producto cortado</fullName>
            </value>
            <value>
                <fullName>Sedimentos blancos</fullName>
            </value>
            <value>
                <fullName>Sedimentos oscuros</fullName>
            </value>
            <value>
                <fullName>Textura distinta</fullName>
            </value>
            <value>
                <fullName>Vidrio</fullName>
            </value>
            <value>
                <fullName>Vómitos</fullName>
            </value>
            <value>
                <fullName>Menor cantidad de tiras</fullName>
            </value>
            <value>
                <fullName>Envase abierto / pinchado</fullName>
                <isActive>false</isActive>
                <label>Envase abierto / pinchado</label>
            </value>
            <value>
                <fullName>Envase hinchado</fullName>
                <isActive>false</isActive>
                <label>Envase hinchado</label>
            </value>
            <value>
                <fullName>Envase sucio / oxidado</fullName>
                <isActive>false</isActive>
                <label>Envase sucio / oxidado</label>
            </value>
            <value>
                <fullName>Etiqueta errónea</fullName>
                <isActive>false</isActive>
                <label>Etiqueta errónea</label>
            </value>
            <value>
                <fullName>Etiqueta ilegible</fullName>
                <isActive>false</isActive>
                <label>Etiqueta ilegible</label>
            </value>
            <value>
                <fullName>Falta cuchara</fullName>
                <isActive>false</isActive>
                <label>Falta cuchara</label>
            </value>
            <value>
                <fullName>Falta sorbete</fullName>
                <isActive>false</isActive>
                <label>Falta sorbete</label>
            </value>
            <value>
                <fullName>Lote y Vencimiento ilegible</fullName>
                <isActive>false</isActive>
                <label>Lote y Vencimiento ilegible</label>
            </value>
            <value>
                <fullName>Menor contenido</fullName>
                <isActive>false</isActive>
                <label>Menor contenido</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <isActive>false</isActive>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>